fix: Fixed scrollbar from not appearing.

--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -9,3 +9,8 @@ body {
 
   --n-border-radius: 1rem;
 }
+
+/* Apply scrollbar over header*/
+.n-scrollbar-rail__scrollbar {
+  @apply z-20;
+}
